[package]
name = "homunculus-utopia"
version = "0.1.0"
authors = ["Alexander McKinney <alexander.f.mckinney@durham.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.4", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend"], version="0.9.1" }
