[package]
name = "homunculus-utopia"
version = "0.1.0"
authors = ["Alex McKinney <alexander.f.mckinney@durham.ac.uk>", "Alexander Hatch <www.instagram.com/alexander_hatch/>"]
description = "Ever wanted to be a homunculus?? Now is your chance??"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", "rustls_backend", "framework", "standard_framework"], version="0.9.1" }
